[gd_scene load_steps=15 format=3 uid="uid://d2ada8b3gehdo"]

[ext_resource type="Texture2D" uid="uid://by0plbklaixr8" path="res://boss/boss_all_phase.png" id="1_cidqk"]
[ext_resource type="Script" path="res://boss/boss.gd" id="2_pv6rb"]
[ext_resource type="PackedScene" uid="uid://p4gntn2ynju" path="res://boss/boss_particles.tscn" id="3_tm0vq"]
[ext_resource type="AudioStream" uid="uid://crkbykfgxuis2" path="res://boss/transition_fart.ogg" id="4_2q25u"]
[ext_resource type="PackedScene" path="res://boss/boss_particles2.tscn" id="5_rei6i"]
[ext_resource type="AudioStream" uid="uid://c0e2k8ubrg2rx" path="res://boss/tentacles.ogg" id="6_t3r2x"]
[ext_resource type="AudioStream" uid="uid://cx4nduawxlgjx" path="res://Traps/mine/sfx_1_-_explosion.wav" id="7_vw6mc"]

[sub_resource type="Animation" id="Animation_6dxav"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_adbvi"]
resource_name = "inter_phase"
length = 0.05
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(50, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_h6gll"]
resource_name = "phase1"
length = 4.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(0.757858, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1bv22"]
resource_name = "phase2"
length = 4.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_o7ghe"]
resource_name = "phase3"
length = 4.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8qra7"]
_data = {
"RESET": SubResource("Animation_6dxav"),
"inter_phase": SubResource("Animation_adbvi"),
"phase1": SubResource("Animation_h6gll"),
"phase2": SubResource("Animation_1bv22"),
"phase3": SubResource("Animation_o7ghe")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pgj8p"]
radius = 3.34427
height = 19.463

[node name="Boss" type="Sprite2D"]
scale = Vector2(-1, 1)
texture = ExtResource("1_cidqk")
hframes = 8
vframes = 3
script = ExtResource("2_pv6rb")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8qra7")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(12.8578, -5.75452)
shape = SubResource("CapsuleShape2D_pgj8p")

[node name="GPUParticles2D" parent="." instance=ExtResource("3_tm0vq")]

[node name="transition_fart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2q25u")
volume_db = 10.0

[node name="GPUParticles2D2" parent="." instance=ExtResource("5_rei6i")]
position = Vector2(0, -1)

[node name="throw_poop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_t3r2x")
volume_db = 2.0

[node name="take_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_vw6mc")
